Add redis to docker compose and its config to config server